# pulsar_paragraph

./: README.md  age.law.csv  bsurf.law.csv  database.csv  databasev2.csv  databasev7.csv  dec.law.csv  dm.law.csv  filtered.csv  minmass.law.csv  period.law.csv  pulsar_paragraphs.py  pulsar_paragraphs.txt  pulsars-links_available.csv  pyproject.toml  s1400.law.csv  survey.law.csv  tst.csv
pulsar_paragraph/: default_gates.py  load_data.py  pulsar_classes.py  pulsar_paragraph.py
pulsar_paragraph/data_files/: databasev5.csv  ecc.law.csv  pb.law.csv  survey.law.csv  vtrans.law.csv
tests/: test_equations.py
